# transkript_bot

./: .env.example  .gitignore  Dockerfile  README.md  colab.ipynb  docker-compose.yml  pyproject.toml
docs/: ADMIN.md
docs/plans/: 2026-02-08-admin-ux-requests-design.md  2026-02-08-admin-ux-requests-plan.md  2026-02-08-telegram-transcription-bot-design.md  2026-02-08-telegram-transcription-bot-implementation-plan.md
src/transkript_bot/: __init__.py  bot.py  config.py  main.py  worker.py
src/transkript_bot/routers/: admin.py  chat_admin.py  common.py  media.py
src/transkript_bot/services/: access.py  commands.py  idle_shutdown.py  keyboard.py  limits.py  menu.py  notifications.py  progress.py  queue.py  system_info.py  telegram_api.py
src/transkript_bot/storage/: db.py  schema.sql
src/transkript_bot/transcription/: backend.py  faster_whisper.py  formatting.py  media.py  whisperx_cli.py
tests/: test_access.py  test_admin_requests.py  test_backend.py  test_bot_commands.py  test_chats.py  test_commands.py  test_config.py  test_faster_whisper.py  test_formatting.py  test_handler_params.py  test_idle_shutdown.py  test_keyboard.py  test_limits.py  test_media.py  test_menu.py  test_progress.py  test_queue.py  test_requests_flow.py  test_stats.py  test_storage.py  test_storage_requests.py  test_system_info.py  test_telegram_api.py  test_whisperx_cli.py
